fixed bug with: -empty record -footer text removed fileInput component

--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,22 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <footer class="footer gradient-1-bg animate full-width">
+      <div class="row">
+
+          <div class="large-12 columns large-centered text-center">
+              <span>Мы в соц. сетях:</span>
+              <div class="social-links">
+                  ТУТ БУДУТЬ ІКОНКИ НА СОЦІАЛКИ ГИГИГИ
+              </div>
+          </div>
+
+          <div class="large-12 columns large-centered text-center">
+
+              <span><b>ProgHub</b> © 2019</span>
+
+          </div>
+      </div>
+  </footer>
   </body>
 </html>
